--- a/rpc-layer/qrpc-sdk/Cargo.toml
+++ b/rpc-layer/qrpc-sdk/Cargo.toml
@@ -6,7 +6,9 @@ authors = ["Kaiden Fey <kookie@spacekookie.de>"]
 edition = "2018"
 
 [dependencies]
-capnp = "*"
+identity = { path = "../../ratman/identity", version = "0.4", package = "ratman-identity" }
+capnp = "0.13"
+
 
 [build-dependencies]
-capnpc = "*"
+capnpc = "0.13"
