--- a/rpc-layer/rpc-broker/Cargo.toml
+++ b/rpc-layer/rpc-broker/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2018"
 identity = { path = "../../ratman/identity", version = "0.4", package = "ratman-identity" }
 qrpc-sdk = { path = "../qrpc-sdk" }
 capnp = "0.13"
+byteorder = "1.0"
 socket2 = { version = "0.3", features = ["unix"] }
 async-std = "=1.5"
+tracing = "0.1"
