--- a/rpc-layer/qrpc-sdk/Cargo.toml
+++ b/rpc-layer/qrpc-sdk/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2018"
 
 [dependencies]
 identity = { path = "../../ratman/identity", version = "0.4", package = "ratman-identity" }
-capnp = "0.13"
 
+async-std = "=1.5"
+async-trait = "*"
+byteorder = "1.0"
+capnp = "0.13"
+socket2 = { version = "0.3", features = ["unix"] }
+tracing = "0.1"
 
 [build-dependencies]
 capnpc = "0.13"
