qrpc-sdk: pinning async-trait to 0.1

--- a/rpc-layer/qrpc-sdk/Cargo.toml
+++ b/rpc-layer/qrpc-sdk/Cargo.toml
@@ -12,7 +12,7 @@ internals = []
 identity = { path = "../../ratman/identity", version = "0.4", package = "ratman-identity" }
 
 async-std = "=1.5"
-async-trait = "*"
+async-trait = "0.1"
 byteorder = "1.0"
 capnp = "0.13"
 socket2 = { version = "0.3", features = ["unix"] }
