--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
 
     # RPC libraries
     "rpc-layer/qrpc-sdk",
-    "rpc-layer/rpc-broker",
+    "rpc-layer/qrpc-broker",
     "rpc-layer/libqaul-rpc",
     "rpc-layer/ratman-rpc",
     "rpc-layer/service-rpc",
