--- a/rpc-layer/qrpc-broker/Cargo.toml
+++ b/rpc-layer/qrpc-broker/Cargo.toml
@@ -12,5 +12,7 @@ qrpc-sdk = { path = "../qrpc-sdk", version = "0.1", features = ["internals"] }
 async-std = "=1.5"
 byteorder = "1.0"
 capnp = "0.13"
+lazy_static = "1.0"
+signal-hook = "0.1.16"
 socket2 = { version = "0.3", features = ["unix"] }
 tracing = "0.1"
