--- a/services/ping/Cargo.toml
+++ b/services/ping/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 [dependencies]
 qrpc-sdk = { path = "../../rpc-layer/qrpc-sdk", version = "0.1" }
 async-std = { version = "=1.5", features = ["attributes"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }
