--- a/utils/alexandria/Cargo.toml
+++ b/utils/alexandria/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 
 [dependencies]
 id = { version = "0.5", path = "../../ratman/identity", features = ["digest", "random", "aligned"], package = "ratman-identity" }
+alexandria-tags = { path = "../alexandria-tags" }
 
 async-std = { version = "=1.5", features = ["unstable", "attributes"] }
 bincode = "1.0"
