--- a/utils/alexandria-tags/Cargo.toml
+++ b/utils/alexandria-tags/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 hex = "0.4"
+
+[dev-dependencies]
+bincode = "1.0"
+serde_json = "1.0"
