--- a/libqaul/types/Cargo.toml
+++ b/libqaul/types/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2018"
 ratman-identity = { version = "0.5", path = "../../ratman/identity", features = ["random"] }
 serde = { version = "1.0", features = ["derive"] }
 alexandria-tags = { path = "../../utils/alexandria-tags" }
+
+[build-dependencies]
+capnpc = { version = "0.13", optional = true }
+
+
+[features]
+rpc = ["capnpc"]
