Pin ratman-identity to 0.6.0 and update Cargo manifest

--- a/clients/hubdctl/Cargo.toml
+++ b/clients/hubdctl/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hubdctl"
 description = "A control RPC client for qaul-hubd"
 version = "0.1.0"
-authors = ["Kaiden Fey <kookie@spacekookie.de>"]
+authors = ["Katharina Fey <kookie@spacekookie.de>"]
 edition = "2018"
 license = "GPL-3.0"
 
