--- a/rpc-layer/qrpc-broker/Cargo.toml
+++ b/rpc-layer/qrpc-broker/Cargo.toml
@@ -2,11 +2,11 @@
 name = "qrpc-broker"
 description = "Provide a generic RPC server to connect qaul services together"
 version = "0.1.0"
-authors = ["Kaiden Fey <kookie@spacekookie.de>"]
+authors = ["Katharina Fey <kookie@spacekookie.de>"]
 edition = "2018"
 
 [dependencies]
-identity = { path = "../../ratman/identity", version = "0.5", package = "ratman-identity", features = ["random"] }
+identity = { path = "../../ratman/identity", version ="0.6.0", package = "ratman-identity", features = ["random"] }
 qrpc-sdk = { path = "../qrpc-sdk", version = "0.1", features = ["internals"] }
 
 async-std = "=1.5"
