--- a/rpc-layer/libqaul-rpc/Cargo.toml
+++ b/rpc-layer/libqaul-rpc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libqaul-rpc2"
 version = "0.1.0"
-authors = ["Kaiden Fey <kookie@spacekookie.de>"]
+authors = ["Katharina Fey <kookie@spacekookie.de>"]
 edition = "2018"
 
 [dependencies]
