--- a/rpc-layer/service-rpc/Cargo.toml
+++ b/rpc-layer/service-rpc/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "service-rpc"
 version = "0.1.0"
-authors = ["Kaiden Fey <kookie@spacekookie.de>"]
+authors = ["Katharina Fey <kookie@spacekookie.de>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
