--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ members = [
     # "utils/android-tracing",
 
     # test binaries
-    # "clients/multinode-test",
+    "clients/multinode-test",
     # "clients/linux-http-test",
     # "clients/linux-voice-test",
     # "clients/mini-tcp",
@@ -60,4 +60,5 @@ members = [
     # Actual target binaries
     "clients/hubdctl",
     "clients/hubd",
+    "clients/linux",
 ]
